fix lint settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,6 @@
 {
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
-    "python.linting.flake8Enabled": false,
-    "python.formatting.provider": "black",
-    "editor.formatOnSave": false,
+    "editor.formatOnSave": true,
     "files.autoSave": "off",
     "files.autoSaveDelay": 1000,
-    "python.linting.lintOnSave": true,
-    "python.linting.lintOnTextChange": false,
-    "python.linting.lintOnOpen": false
+    "editor.defaultFormatter": "ms-python.black-formatter"
 }
