--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 *.env*
 /venv
 __pycache__/
-schedules.crontab
-refresh_token_cache
-bin/
-profiles/
-crontasks/
 .stfolder
 .stignore
 accounts.yml
+
+refresh_token_cache/*
+!refresh_token_cache/.keep
