--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,5 @@
+-r requirements.txt
 black==24.4.2
-mypy-extensions==1.0.0
-packaging==24.1
-pathspec==0.12.1
-platformdirs==4.2.2
 PyQt5==5.15.10
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.13.0
