--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.formatOnSave": true,
     "files.autoSave": "off",
     "files.autoSaveDelay": 1000,
-    "editor.defaultFormatter": "ms-python.black-formatter"
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "python.envFile": "${workspaceFolder}/.env"
 }
