--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -18,14 +18,11 @@ jobs:
       with:
         python-version: '3.11.2'
 
-    - name: Install Hatch
-      uses: pypa/hatch@install
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run tests
       run: |
-        hatch env create test
-        hatch run test:pytest -v
+        pytest -v
