--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,28 @@
 black==24.4.2
+blinker==1.8.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 Flask==3.0.3
+idna==3.7
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+mypy-extensions==1.0.0
+oauthlib==3.2.2
+packaging==24.1
+pathspec==0.12.1
 piexif==1.1.3
-Pillow==10.3.0
+pillow==10.3.0
+platformdirs==4.2.2
+pluggy==1.5.0
 pytest==8.2.2
 PyYAML==6.0.1
-Requests==2.32.3
-requests_mock==1.12.1
+requests==2.32.3
+requests-mock==1.12.1
+requests-oauthlib==1.3.1
 tweepy==4.14.0
-
+urllib3==2.2.2
+Werkzeug==3.0.3
