--- a/tests/fixtures/accounts.yml
+++ b/tests/fixtures/accounts.yml
@@ -30,6 +30,4 @@ my_account:
     client_id: 123
     client_secret: 456
     default_mature_classification: "" # optional
-    galleries:
-      featured: Featured
-      "123": My Galleria
+    featured: true
