test the image scheduler

--- a/tests/fixtures/accounts.yml
+++ b/tests/fixtures/accounts.yml
@@ -1,7 +1,7 @@
 my_account:
   version: 1
   id: my_account
-  directory_path: /my-pictures/**/posted
+  directory_path: ./tests/fixtures
   extensions:
     - jpg
     - jpeg
