--- a/accounts.example.yml
+++ b/accounts.example.yml
@@ -32,3 +32,6 @@ my_account:
     client_secret: 456
     default_mature_classification: "" # optional
     featured: true
+    gallery_ids:
+      - "123"
+      - "a456"
