--- a/tests/fixtures/accounts.yml
+++ b/tests/fixtures/accounts.yml
@@ -31,3 +31,15 @@ my_account:
     client_secret: 456
     default_mature_classification: "" # optional
     featured: true
+  sub_configs:
+    -
+      directory_path: "./tests/fixtures/*_P*"
+      nsfw: true
+      deviant:
+        default_mature_classification: "test"
+    -
+
+      directory_path: "./tests/fixtures/*DEVI*"
+      deviant:
+        additional_gallery_ids:
+          - "123"
